--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <style>
+    body{
+      background: #F4F4F4 !important;
+    } 
+  </style>
 </head>
 <body>
   <app-root></app-root>
